fix: log request index
